<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PurchaseSummaryActivity">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/purple_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/banner" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/congrats"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/banner"
        app:layout_constraintStart_toStartOf="@id/banner"
        app:layout_constraintTop_toTopOf="@id/banner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/purchase_success"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/label"
        app:layout_constraintStart_toStartOf="@id/label"
        app:layout_constraintTop_toBottomOf="@id/label" />
    
    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_summary"
        app:layout_constraintTop_toBottomOf="@id/banner"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imagePackage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        tools:src="@drawable/sao_paulo_sp"
        app:layout_constraintTop_toBottomOf="@id/label2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_of_travel_package" />

    <TextView
        android:id="@+id/labelDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imagePackage"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="São Paulo"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/labelDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/labelDestination"
        app:layout_constraintStart_toStartOf="@id/labelDestination"
        tools:text="08/12 - 10/12 de 2021"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/labelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/labelDate"
        app:layout_constraintStart_toStartOf="@id/labelDate"
        tools:text="R$ 243,99"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>